--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
 <title>Page Title</title>
 </head>
 <body>
-
-
-<p>First Paragraph</p>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+    <p>First Paragraph</p>
 <p>this is another paragraph</p>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
