added another p tag

--- a/index.html
+++ b/index.html
@@ -10,3 +10,12 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+<p>this is another paragraph</p>
+</body>
+</html>
